// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateModelConfig no providers available returns ULTIMATE_FALLBACK for all agents and categories when no providers 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "opencode/glm-4.7-free",
    },
    "executor": {
      "model": "opencode/glm-4.7-free",
    },
    "explore": {
      "model": "opencode/glm-4.7-free",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "reviewer": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "designer": {
      "model": "opencode/glm-4.7-free",
    },
    "hard": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models when only Claude is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "executor": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "designer": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "executor": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "designer": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models when only OpenAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "executor": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "explore": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "reviewer": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "designer": {
      "model": "opencode/glm-4.7-free",
    },
    "hard": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "openai/gpt-5.3-codex",
      "variant": "low",
    },
    "visual-engineering": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "writing": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "executor": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "explore": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "reviewer": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "designer": {
      "model": "opencode/glm-4.7-free",
    },
    "hard": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "openai/gpt-5.3-codex",
      "variant": "low",
    },
    "visual-engineering": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "writing": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models when only Gemini is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "executor": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "explore": {
      "model": "opencode/glm-4.7-free",
    },
    "librarian": {
      "model": "google/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "reviewer": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "designer": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "quick": {
      "model": "google/gemini-3-flash-preview",
    },
    "visual-engineering": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "executor": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "explore": {
      "model": "opencode/glm-4.7-free",
    },
    "librarian": {
      "model": "google/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "reviewer": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "designer": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "quick": {
      "model": "google/gemini-3-flash-preview",
    },
    "visual-engineering": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models from fallback chains when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "executor": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "google/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "designer": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "hard": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models with isMax20 flag when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "executor": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "google/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "designer": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "hard": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models when only OpenCode Zen is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "opencode/gpt-5.4",
      "variant": "high",
    },
    "executor": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "explore": {
      "model": "opencode/minimax-m2.5-free",
    },
    "librarian": {
      "model": "opencode/gemini-3-flash",
    },
    "oracle": {
      "model": "opencode/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "opencode/gpt-5.4",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "designer": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "hard": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "writing": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "opencode/gpt-5.4",
      "variant": "high",
    },
    "executor": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "explore": {
      "model": "opencode/minimax-m2.5-free",
    },
    "librarian": {
      "model": "opencode/gemini-3-flash",
    },
    "oracle": {
      "model": "opencode/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "opencode/gpt-5.4",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "designer": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "hard": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "writing": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models when only Copilot is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "github-copilot/gpt-5.4",
      "variant": "high",
    },
    "executor": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "explore": {
      "model": "github-copilot/grok-code-fast-1",
    },
    "librarian": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "github-copilot/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "reviewer": {
      "model": "github-copilot/gpt-5.4",
      "variant": "high",
    },
  },
  "categories": {
    "designer": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "github-copilot/gpt-5.4",
      "variant": "high",
    },
    "executor": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "explore": {
      "model": "github-copilot/grok-code-fast-1",
    },
    "librarian": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "github-copilot/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "reviewer": {
      "model": "github-copilot/gpt-5.4",
      "variant": "high",
    },
  },
  "categories": {
    "designer": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for librarian when only ZAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "opencode/glm-4.7-free",
    },
    "executor": {
      "model": "opencode/glm-4.7-free",
    },
    "explore": {
      "model": "opencode/glm-4.7-free",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "orchestrator": {
      "model": "zai-coding-plan/glm-5",
    },
    "reviewer": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "designer": {
      "model": "zai-coding-plan/glm-5",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-5",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for librarian with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "opencode/glm-4.7-free",
    },
    "executor": {
      "model": "opencode/glm-4.7-free",
    },
    "explore": {
      "model": "opencode/glm-4.7-free",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "orchestrator": {
      "model": "zai-coding-plan/glm-5",
    },
    "reviewer": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "designer": {
      "model": "zai-coding-plan/glm-5",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-5",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + OpenCode Zen combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "opencode/gpt-5.4",
      "variant": "high",
    },
    "executor": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "opencode/minimax-m2.5-free",
    },
    "librarian": {
      "model": "opencode/gemini-3-flash",
    },
    "oracle": {
      "model": "opencode/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "opencode/gpt-5.4",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "designer": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "hard": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "writing": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses OpenAI + Copilot combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "executor": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "explore": {
      "model": "github-copilot/grok-code-fast-1",
    },
    "librarian": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "reviewer": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "designer": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "hard": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + ZAI combination (librarian uses ZAI) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "executor": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "designer": {
      "model": "zai-coding-plan/glm-5",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-5",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Gemini + Claude combination (explore uses Gemini) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "executor": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "google/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "designer": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all fallback providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "github-copilot/gpt-5.4",
      "variant": "high",
    },
    "executor": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "explore": {
      "model": "github-copilot/grok-code-fast-1",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "oracle": {
      "model": "github-copilot/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "reviewer": {
      "model": "github-copilot/gpt-5.4",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "designer": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "hard": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "executor": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "github-copilot/grok-code-fast-1",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "designer": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "hard": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/allOwO/opencode-codex-orch/main/assets/opencode-codex-orch.schema.json",
  "agents": {
    "deepsearch": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "executor": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "github-copilot/grok-code-fast-1",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "designer": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "hard": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
  },
}
`;
